atualizacao de seguranca, login e tela de venda

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -98,6 +98,7 @@
             <a href="/usuario">Usuários</a>
             <a href="/produto">Produtos</a>
             <a href="/funcionario">Funcionários</a>
+            <a href="/venda">Venda</a>
         </nav>   
     </body>
 </html> 
