--- a/src/main/resources/templates/produto/form.html
+++ b/src/main/resources/templates/produto/form.html
@@ -95,6 +95,7 @@
             <a href="/usuario">Usuários</a>
             <a href="/produto">Produtos</a>
             <a href="/funcionario">Funcionários</a>
+            <a href="/venda">Venda</a>
         </nav>
         <main class= "container">
             <form th:action="@{/produto/(form)}"
