--- a/src/main/resources/templates/usuario/form.html
+++ b/src/main/resources/templates/usuario/form.html
@@ -93,6 +93,7 @@
                 <a href="/usuario">Usuários</a>
                 <a href="/produto">Produtos</a>
                 <a href="/funcionario">Funcionários</a>
+                <a href="/venda">Venda</a>
             </nav>
             <div class="flex-container">
                 <main class="container">
