--- a/src/main/resources/templates/venda/form.html
+++ b/src/main/resources/templates/venda/form.html
@@ -98,78 +98,40 @@
             <a href="/venda">Venda</a>
         </nav>
         <main class="container">
-            <form th:action="@{/funcionario/(form)}"
+            <form th:action="@{/venda/(form)}"
                 method="POST"
-                th:object="${funcionario}">
+                th:object="${venda}">
 
                 <input type="hidden" th:field="*{id}">
 
                 <div class="form-group">
-                    <label for="txtNome">Nome</label>
+                    <label for="txtUsuario">Usuário</label>
                     <input type="text" class="form-control"
-                        th:field="*{nome}" id="txtNome">
+                        th:field="*{usuario}" id="txtUsuario">
                     
-                    <p class="alert alert-danger" th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></p>
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('usuario')}" th:errors="*{usuario}"></p>
 
                 </div>
 
                 <div class="form-group">
-                    <label for="txtCpf">CPF</label>
+                    <label for="txtCliente">Cliente</label>
                     <input type="text" class="form-control"
-                        th:field="*{Cpf}" id="txtCpf">
-                    <p class="alert alert-danger" th:if="${#fields.hasErrors('cpf')}" th:errors="*{cpf}"></p>
+                        th:field="*{cliente}" id="txtCliente">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('cliente')}" th:errors="*{cliente}"></p>
                 </div>
 
                 <div class="form-group">
-                    <label for="txtEndereco">Endereço</label>
-                    <input type="text" class="form-control" th:field="*{endereco}" id="txtEndereco">
-                    <p class="alert alert-danger" th:if="${#fields.hasErrors('endereco')}" th:errors="*{endereco}"></p>
+                    <label for="txtProduto">Produto</label>
+                    <input type="text" class="form-control" th:field="*{produto}" id="txtProduto">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('produto')}" th:errors="*{produto}"></p>
                 </div>
                 
+             
                 <div class="form-group">
-                    <label for="txtEstado">Estado</label>
-                   <select class="form-control" th:field="*{estado}" id="txtEstado">
-                        <option value="">Selecione o Estado</option>
-                        <option value="Amapá">Amapá</option>
-                        <option value="Amazonas">Amazonas</option>
-                        <option value="Bahia">Bahia</option>
-                        <option value="Ceará">Ceará</option>
-                        <option value="Espírito Santo">Espírito Santo</option>
-                        <option value="Goiás">Goiás</option>
-                        <option value="Maranhão">Maranhão</option>
-                        <option value="Mato Grosso">Mato Grosso</option>
-                        <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
-                        <option value="Minas Gerais">Minas Gerais</option>
-                        <option value="Pará">Pará</option>
-                        <option value="Paraíba">Paraíba</option>
-                        <option value="Paraná">Paraná</option>
-                        <option value="Pernambuco">Pernambuco</option>
-                        <option value="Piauí">Piauí</option>
-                        <option value="Rio de Janeiro">Rio de Janeiro</option>
-                        <option value="Rio Grande do Norte">Rio Grande do Norte</option>
-                        <option value="Rio Grande do Sul">Rio Grande do Sul</option>
-                        <option value="Rondônia">Rondônia</option>
-                        <option value="Roraima">Roraima</option>
-                        <option value="Santa Catarina">Santa Catarina</option>
-                        <option value="São Paulo">São Paulo</option>
-                        <option value="Sergipe">Sergipe</option>
-                        <option value="Tocantins">Tocantins</option>
-                        <option value="Distrito Federal">Distrito Federal</option>
-                   </select>
-                    <p class="alert alert-danger" th:if="${#fields.hasErrors('estado')}" th:errors="*{estado}"></p>
-                </div>
-
-                <div class="form-group">
-                    <label for="txtTelefone">Telefone</label>
+                    <label for="txtPreco">Preço</label>
                     <input type="text" class="form-control"
-                        th:field="*{Telefone}" id="txtTelefone">
-                    <p class="alert alert-danger" th:if="${#fields.hasErrors('telefone')}" th:errors="*{telefone}"></p>
-                </div>
-
-                <div class="form-group">
-                    <label for="txtEmail">Email</label>
-                    <input type="email" class="form-control" th:field="*{email}" id="txtEmail">
-                    <p class="alert alert-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+                        th:field="*{preco}" id="txtPreco">
+                    <p class="alert alert-danger" th:if="${#fields.hasErrors('preco')}" th:errors="*{preco}"></p>
                 </div>
 
                 <div class="form-group">
